<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.TablesFragment">

    <ImageView
        android:id="@+id/im_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background_1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_tables"
        style="@style/title_style"
        android:text="@string/tables"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/im_background" />

    <TextView
        android:id="@+id/tv_russia"
        style="@style/buttons_style"
        android:text="@string/russia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tables" />

    <TextView
        android:id="@+id/tv_england"
        style="@style/buttons_style"
        android:text="@string/england"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_russia" />

    <TextView
        android:id="@+id/tv_germany"
        style="@style/buttons_style"
        android:text="@string/germany"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_england" />

    <TextView
        android:id="@+id/tv_spain"
        style="@style/buttons_style"
        android:text="@string/spain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_germany" />
</androidx.constraintlayout.widget.ConstraintLayout>