<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_command_title_defence"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/command"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_tournament_title_defence"
        android:layout_width="70dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/tournament"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_kicks_title_defence"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/z_i_kicks"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_add_info_title_defence"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/app_gray"
        android:gravity="center"
        android:text="@string/selection"
        android:textColor="@color/white"
        android:textStyle="bold" />
</androidx.appcompat.widget.LinearLayoutCompat>