<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.screens.OptionFragment">

    <ImageView
        android:id="@+id/im_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background_1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_options_title"
        style="@style/title_style"
        android:text="@string/options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_notification"
        style="@style/option_text_style"
        android:text="@string/notification"
        app:layout_constraintStart_toStartOf="@+id/tv_options_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_options_title" />

    <TextView
        android:id="@+id/tv_theme"
        style="@style/option_text_style"
        android:text="@string/black_theme"
        app:layout_constraintStart_toStartOf="@+id/tv_options_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_notification" />

    <TextView
        android:id="@+id/tv_wall_paper"
        style="@style/option_text_style"
        android:text="@string/wall_paper"
        app:layout_constraintStart_toStartOf="@+id/tv_options_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_theme" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:thumb="@drawable/switch_thumb"
        app:layout_constraintBottom_toBottomOf="@+id/tv_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_notification"
        app:track="@drawable/switch_track" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:thumb="@drawable/switch_thumb"
        app:layout_constraintBottom_toBottomOf="@+id/tv_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_theme"
        app:track="@drawable/switch_track" />

    <TextView
        android:id="@+id/tv_change"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/orange_background"
        android:fontFamily="@font/montserrat_extrabolditalic"
        android:gravity="center"
        android:text="@string/change"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tv_wall_paper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_theme"
        app:layout_constraintTop_toTopOf="@+id/tv_wall_paper" />
</androidx.constraintlayout.widget.ConstraintLayout>